--- a/Legacy/src/Umbrella.Legacy.Utilities/Umbrella.Legacy.Utilities.csproj
+++ b/Legacy/src/Umbrella.Legacy.Utilities/Umbrella.Legacy.Utilities.csproj
@@ -17,7 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Core\Umbrella.Utilities\Umbrella.Utilities.csproj" />
+    <ProjectReference Include="..\..\..\Core\src\Umbrella.Utilities\Umbrella.Utilities.csproj" />
   </ItemGroup>
 
   <ItemGroup>
