--- a/AspNetCore/test/Umbrella.AspNetCore.DynamicImage.Test/Umbrella.AspNetCore.DynamicImage.Test.csproj
+++ b/AspNetCore/test/Umbrella.AspNetCore.DynamicImage.Test/Umbrella.AspNetCore.DynamicImage.Test.csproj
@@ -6,14 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Umbrella.AspNetCore.DynamicImage\Umbrella.AspNetCore.DynamicImage.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
     <PackageReference Include="Moq" Version="4.7.145" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <PackageReference Include="xunit" Version="2.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Umbrella.AspNetCore.DynamicImage\Umbrella.AspNetCore.DynamicImage.csproj" />
   </ItemGroup>
 
   <ItemGroup>
