--- a/DynamicImage/src/Umbrella.DynamicImage.FreeImage/Umbrella.DynamicImage.FreeImage.csproj
+++ b/DynamicImage/src/Umbrella.DynamicImage.FreeImage/Umbrella.DynamicImage.FreeImage.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Core\Umbrella.DynamicImage.Abstractions\Umbrella.DynamicImage.Abstractions.csproj" />
+    <ProjectReference Include="..\Umbrella.DynamicImage.Abstractions\Umbrella.DynamicImage.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
