--- a/DynamicImage/src/Umbrella.DynamicImage/Umbrella.DynamicImage.csproj
+++ b/DynamicImage/src/Umbrella.DynamicImage/Umbrella.DynamicImage.csproj
@@ -21,8 +21,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Umbrella.DynamicImage.Abstractions\Umbrella.DynamicImage.Abstractions.csproj" />
-    <ProjectReference Include="..\Umbrella.FileSystem.Disk\Umbrella.FileSystem.Disk.csproj" />
-    <ProjectReference Include="..\Umbrella.Utilities\Umbrella.Utilities.csproj" />
+    <ProjectReference Include="..\..\..\FileSystem\src\Umbrella.FileSystem.Disk\Umbrella.FileSystem.Disk.csproj" />
+    <ProjectReference Include="..\..\..\Core\src\Umbrella.Utilities\Umbrella.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
