--- a/FileSystem/test/Umbrella.FileSystem.Test/Umbrella.FileSystem.Test.csproj
+++ b/FileSystem/test/Umbrella.FileSystem.Test/Umbrella.FileSystem.Test.csproj
@@ -13,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Core\Umbrella.FileSystem.AzureStorage\Umbrella.FileSystem.AzureStorage.csproj" />
-    <ProjectReference Include="..\..\Core\Umbrella.FileSystem.Disk\Umbrella.FileSystem.Disk.csproj" />
+    <ProjectReference Include="..\..\src\Umbrella.FileSystem.AzureStorage\Umbrella.FileSystem.AzureStorage.csproj" />
+    <ProjectReference Include="..\..\src\Umbrella.FileSystem.Disk\Umbrella.FileSystem.Disk.csproj" />
   </ItemGroup>
 
   <ItemGroup>
