--- a/TypeScript/src/Umbrella.TypeScript/Umbrella.TypeScript.csproj
+++ b/TypeScript/src/Umbrella.TypeScript/Umbrella.TypeScript.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Umbrella.TypeScript.Annotations\Umbrella.TypeScript.Annotations.csproj" />
-    <ProjectReference Include="..\Umbrella.Utilities\Umbrella.Utilities.csproj" />
+    <ProjectReference Include="..\..\..\Core\src\Umbrella.Utilities\Umbrella.Utilities.csproj" />
   </ItemGroup>
 
   <ItemGroup>
