Final solution restructuring changes. This is the last commit for v1.0.0.

--- a/AspNetCore/src/Umbrella.AspNetCore.MultiTenant/Umbrella.AspNetCore.MultiTenant.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.MultiTenant/Umbrella.AspNetCore.MultiTenant.csproj
@@ -17,7 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\DataAccess\src\Umbrella.DataAccess.MultiTenant.Abstractions\Umbrella.DataAccess.MultiTenant.Abstractions.csproj" />
+    <ProjectReference Include="..\..\..\DataAccess\src\Umbrella.DataAccess.MultiTenant\Umbrella.DataAccess.MultiTenant.csproj" />
     <ProjectReference Include="..\..\..\Core\src\Umbrella.Utilities\Umbrella.Utilities.csproj" />
   </ItemGroup>
 
