Oops... missed off some binaries from the last commit for unit testing. Definitely the last v1.0.0 commit this time!

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ BenchmarkDotNet.Artifacts
 /Test/Umbrella.DynamicImage.Impl.Test/Output
 /coverage
 /git-mv-with-history.sh
+/DynamicImage/test/Umbrella.DynamicImage.Impl.Test/Output
