--- a/AspNetCore/test/Umbrella.AspNetCore.DynamicImage.Test/Umbrella.AspNetCore.DynamicImage.Test.csproj
+++ b/AspNetCore/test/Umbrella.AspNetCore.DynamicImage.Test/Umbrella.AspNetCore.DynamicImage.Test.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net462</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
@@ -14,11 +14,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Umbrella.AspNetCore.DynamicImage\Umbrella.AspNetCore.DynamicImage.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
   <ItemGroup>
