--- a/DataAccess/src/Umbrella.DataAccess.EF6/Umbrella.DataAccess.EF6.csproj
+++ b/DataAccess/src/Umbrella.DataAccess.EF6/Umbrella.DataAccess.EF6.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net46</TargetFramework>
+    <TargetFramework>net471</TargetFramework>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup>
     <PackageId>Umbrella.DataAccess.EF6</PackageId>
-    <Version>1.0.0</Version>
+    <Version>2.0.0-rc-00001</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2017</Copyright>
@@ -20,10 +20,11 @@
     <PackageReference Include="EntityFramework" Version="6.1.3" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
+  <ItemGroup>
     <Reference Include="System.Data" />
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="netstandard" />
   </ItemGroup>
 
   <ItemGroup>
