--- a/DataAccess/src/Umbrella.DataAccess.MultiTenant.EF6/Umbrella.DataAccess.MultiTenant.EF6.csproj
+++ b/DataAccess/src/Umbrella.DataAccess.MultiTenant.EF6/Umbrella.DataAccess.MultiTenant.EF6.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net46</TargetFramework>
+    <TargetFramework>net471</TargetFramework>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup>
     <PackageId>Umbrella.DataAccess.MultiTenant.EF6</PackageId>
-    <Version>1.0.0</Version>
+    <Version>2.0.0-rc-00001</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2017</Copyright>
@@ -19,11 +19,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Umbrella.DataAccess.EF6\Umbrella.DataAccess.EF6.csproj" />
     <ProjectReference Include="..\Umbrella.DataAccess.MultiTenant\Umbrella.DataAccess.MultiTenant.csproj" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
 </Project>
