--- a/Legacy/src/Umbrella.Legacy.WebUtilities.DataAnnotations/Umbrella.Legacy.WebUtilities.DataAnnotations.csproj
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities.DataAnnotations/Umbrella.Legacy.WebUtilities.DataAnnotations.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net462</TargetFramework>
+    <TargetFramework>net471</TargetFramework>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup>
     <PackageId>Umbrella.Legacy.WebUtilities.DataAnnotations</PackageId>
-    <Version>1.0.0</Version>
+    <Version>2.0.0-rc-00001</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2017</Copyright>
