--- a/Logging/src/Umbrella.Extensions.Logging.Log4Net/Umbrella.Extensions.Logging.Log4Net.csproj
+++ b/Logging/src/Umbrella.Extensions.Logging.Log4Net/Umbrella.Extensions.Logging.Log4Net.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net46</TargetFramework>
+    <TargetFramework>net471</TargetFramework>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup>
     <PackageId>Umbrella.Extensions.Logging.Log4Net</PackageId>
-    <Version>1.0.0</Version>
+    <Version>2.0.0-rc-00001</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2017</Copyright>
@@ -18,7 +18,11 @@
 
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.8" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="netstandard" />
+  </ItemGroup>
+  
 </Project>
