Created a new project to host the majority of the logging code not dependent on log4net so that it can be used with different logging frameworks in future.

--- a/Logging/src/Umbrella.Extensions.Logging.Log4Net.Azure/Umbrella.Extensions.Logging.Log4Net.Azure.csproj
+++ b/Logging/src/Umbrella.Extensions.Logging.Log4Net.Azure/Umbrella.Extensions.Logging.Log4Net.Azure.csproj
@@ -18,12 +18,10 @@
 
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.8" />
-    <PackageReference Include="WindowsAzure.Storage" Version="8.7.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Core\src\Umbrella.Utilities.Caching\Umbrella.Utilities.Caching.csproj" />
+    <ProjectReference Include="..\Umbrella.Extensions.Logging.Azure\Umbrella.Extensions.Logging.Azure.csproj" />
   </ItemGroup>
 
 </Project>
