Marked projects which should not be packaged with the IsPackable project property. Updated version to 2.0.0-rc-00008

--- a/DynamicImage/test/Umbrella.DynamicImage.Impl.Test/Umbrella.DynamicImage.Impl.Test.csproj
+++ b/DynamicImage/test/Umbrella.DynamicImage.Impl.Test/Umbrella.DynamicImage.Impl.Test.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>    
+  <PropertyGroup>
     <TargetFramework>net47</TargetFramework>
     <LangVersion>latest</LangVersion>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
