--- a/Logging/test/Umbrella.Extensions.Logging.Log4Net.Azure.Test/Umbrella.Extensions.Logging.Log4Net.Azure.Test.csproj
+++ b/Logging/test/Umbrella.Extensions.Logging.Log4Net.Azure.Test/Umbrella.Extensions.Logging.Log4Net.Azure.Test.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net47</TargetFramework>
     <LangVersion>latest</LangVersion>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
