--- a/Samples/Umbrella.AspNetCore.Samples/Umbrella.AspNetCore.Samples.csproj
+++ b/Samples/Umbrella.AspNetCore.Samples/Umbrella.AspNetCore.Samples.csproj
@@ -6,6 +6,7 @@
     <PreserveCompilationContext>true</PreserveCompilationContext>
     <OutputType>Exe</OutputType>
     <UserSecretsId>b7181249-37e4-4aae-b8fc-c65370d6f601</UserSecretsId>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
