--- a/TypeScript/test/Umbrella.TypeScript.Test/Umbrella.TypeScript.Test.csproj
+++ b/TypeScript/test/Umbrella.TypeScript.Test/Umbrella.TypeScript.Test.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>    
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <LangVersion>latest</LangVersion>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
