Updated the copyright, license and project urls in all .csproj files that can be built as packages.

--- a/Core/src/Umbrella.ActiveDirectory/Umbrella.ActiveDirectory.csproj
+++ b/Core/src/Umbrella.ActiveDirectory/Umbrella.ActiveDirectory.csproj
@@ -10,11 +10,13 @@
     <Version>2.0.0-rc-00008</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
-    <Copyright>Zinofi Digital Ltd 2017</Copyright>
+    <Copyright>Zinofi Digital Ltd 2018</Copyright>
     <Description>
       This package is used to retrieve authentication tokens from Azure Active Directory using either
       client credentials or a client certificate. The tokens can then be used to access certain Azure services.
     </Description>
+    <PackageLicenseUrl>https://github.com/zinofi/Umbrella/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
