--- a/DynamicImage/src/Umbrella.DynamicImage.Caching.AzureStorage/Umbrella.DynamicImage.Caching.AzureStorage.csproj
+++ b/DynamicImage/src/Umbrella.DynamicImage.Caching.AzureStorage/Umbrella.DynamicImage.Caching.AzureStorage.csproj
@@ -9,10 +9,12 @@
     <Version>2.0.0-rc-00008</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
-    <Copyright>Zinofi Digital Ltd 2017</Copyright>
+    <Copyright>Zinofi Digital Ltd 2018</Copyright>
     <Description>
       This package provides an Azure Blob Storage based caching mechanism for the Umbrella.DynamicImage infrastructure.
     </Description>
+    <PackageLicenseUrl>https://github.com/zinofi/Umbrella/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
