--- a/AspNetCore/src/Umbrella.AspNetCore.DynamicImage/Umbrella.AspNetCore.DynamicImage.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.DynamicImage/Umbrella.AspNetCore.DynamicImage.csproj
@@ -10,11 +10,13 @@
     <Version>2.0.0-rc-00008</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
-    <Copyright>Zinofi Digital Ltd 2017</Copyright>
+    <Copyright>Zinofi Digital Ltd 2018</Copyright>
     <Description>
       This package contains middleware and tag helpers to be used in conjunction
       with the Umbrella.DynamicImage.* packages.
     </Description>
+    <PackageLicenseUrl>https://github.com/zinofi/Umbrella/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
