--- a/TypeScript/src/Umbrella.TypeScript.Annotations/Umbrella.TypeScript.Annotations.csproj
+++ b/TypeScript/src/Umbrella.TypeScript.Annotations/Umbrella.TypeScript.Annotations.csproj
@@ -10,11 +10,13 @@
     <Version>2.0.0-rc-00008</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
-    <Copyright>Zinofi Digital Ltd 2017</Copyright>
+    <Copyright>Zinofi Digital Ltd 2018</Copyright>
     <Description>
       This package contains attributes that can be applied to POCO classes to detail how the code generators located in the Umbrella.TypeScript.* packages will
       generate TypeScript representations of those classes.
     </Description>
+    <PackageLicenseUrl>https://github.com/zinofi/Umbrella/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
   </PropertyGroup>
 
 </Project>
