--- a/TypeScript/src/Umbrella.TypeScript.Aurelia/Umbrella.TypeScript.Aurelia.csproj
+++ b/TypeScript/src/Umbrella.TypeScript.Aurelia/Umbrella.TypeScript.Aurelia.csproj
@@ -10,10 +10,12 @@
     <Version>2.0.0-rc-00008</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
-    <Copyright>Zinofi Digital Ltd 2017</Copyright>
+    <Copyright>Zinofi Digital Ltd 2018</Copyright>
     <Description>
       This package builds on the Umbrella.TypeScript generators by providing a generator specifically for creating code for use with Aurelia.
     </Description>
+    <PackageLicenseUrl>https://github.com/zinofi/Umbrella/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
