Added a TeamServices configuration. Updated test projects to read the Azure StorageConnectionString from an environment variable when running in VSTS. Extended the DebugUtility class to work with the new TeamServices config. Amended the file providers to allow for security access checks to be performed before reading files. Optimizations. Added a new AggressiveNoCacheHandler WebAPI message handler.

--- a/AspNetCore/src/Umbrella.AspNetCore.DataAnnotations/Umbrella.AspNetCore.DataAnnotations.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.DataAnnotations/Umbrella.AspNetCore.DataAnnotations.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <LangVersion>latest</LangVersion>
+    <Configurations>Debug;Release;TeamServices</Configurations>
   </PropertyGroup>
 
   <PropertyGroup>
