--- a/DynamicImage/test/Umbrella.DynamicImage.Impl.Test/Umbrella.DynamicImage.Impl.Test.csproj
+++ b/DynamicImage/test/Umbrella.DynamicImage.Impl.Test/Umbrella.DynamicImage.Impl.Test.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net47</TargetFramework>
     <LangVersion>latest</LangVersion>
     <IsPackable>false</IsPackable>
+    <Configurations>Debug;Release;TeamServices</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
