--- a/DataAccess/src/Umbrella.DataAccess.MultiTenant.EF6/Umbrella.DataAccess.MultiTenant.EF6.csproj
+++ b/DataAccess/src/Umbrella.DataAccess.MultiTenant.EF6/Umbrella.DataAccess.MultiTenant.EF6.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net47</TargetFramework>
     <LangVersion>latest</LangVersion>
+    <Configurations>Debug;Release;TeamServices</Configurations>
   </PropertyGroup>
 
   <PropertyGroup>
