--- a/Legacy/test/Umbrella.Legacy.WebUtilities.Test/Umbrella.Legacy.WebUtilities.Test.csproj
+++ b/Legacy/test/Umbrella.Legacy.WebUtilities.Test/Umbrella.Legacy.WebUtilities.Test.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net47</TargetFramework>
     <LangVersion>latest</LangVersion>
     <IsPackable>false</IsPackable>
+    <Configurations>Debug;Release;TeamServices</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
