--- a/Logging/src/Umbrella.Extensions.Logging.Azure/Umbrella.Extensions.Logging.Azure.csproj
+++ b/Logging/src/Umbrella.Extensions.Logging.Azure/Umbrella.Extensions.Logging.Azure.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net47</TargetFramework>
     <LangVersion>latest</LangVersion>
+    <Configurations>Debug;Release;TeamServices</Configurations>
   </PropertyGroup>
 
   <PropertyGroup>
