--- a/Logging/test/Umbrella.Extensions.Logging.Log4Net.Azure.Test/Umbrella.Extensions.Logging.Log4Net.Azure.Test.csproj
+++ b/Logging/test/Umbrella.Extensions.Logging.Log4Net.Azure.Test/Umbrella.Extensions.Logging.Log4Net.Azure.Test.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net47</TargetFramework>
     <LangVersion>latest</LangVersion>
     <IsPackable>false</IsPackable>
+    <Configurations>Debug;Release;TeamServices</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
