--- a/N2CMS/src/Umbrella.N2/Umbrella.N2.csproj
+++ b/N2CMS/src/Umbrella.N2/Umbrella.N2.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net47</TargetFramework>
     <LangVersion>latest</LangVersion>
+    <Configurations>Debug;Release;TeamServices</Configurations>
   </PropertyGroup>
 
   <PropertyGroup>
