--- a/TypeScript/src/Umbrella.TypeScript.Aurelia.Tools/Umbrella.TypeScript.Aurelia.Tools.csproj
+++ b/TypeScript/src/Umbrella.TypeScript.Aurelia.Tools/Umbrella.TypeScript.Aurelia.Tools.csproj
@@ -5,6 +5,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <LangVersion>latest</LangVersion>
+    <Configurations>Debug;Release;TeamServices</Configurations>
   </PropertyGroup>
 
   <PropertyGroup>
