--- a/TypeScript/src/Umbrella.TypeScript/Umbrella.TypeScript.csproj
+++ b/TypeScript/src/Umbrella.TypeScript/Umbrella.TypeScript.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <LangVersion>latest</LangVersion>
+    <Configurations>Debug;Release;TeamServices</Configurations>
   </PropertyGroup>
 
   <PropertyGroup>
