--- a/Unity/src/Umbrella.Unity/Umbrella.Unity.csproj
+++ b/Unity/src/Umbrella.Unity/Umbrella.Unity.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
     <LangVersion>latest</LangVersion>
+    <Configurations>Debug;Release;TeamServices</Configurations>
   </PropertyGroup>
 
   <PropertyGroup>
