Added some test documentation for the Umbrella.Utilities.Caching package. Added cancellation token support to the extension methods and changed the names of some to align with IMemoryCache. Additional functional changes. Changes to the logging methods to ensure key data is added to the state dictionary before being passed internally to the logging implementation.

--- a/Core/src/Umbrella.Utilities.Caching/Umbrella.Utilities.Caching.csproj
+++ b/Core/src/Umbrella.Utilities.Caching/Umbrella.Utilities.Caching.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>latest</LangVersion>
     <Configurations>Debug;Release;TeamServices</Configurations>
+    <DocumentationFile>bin\Release\netstandard2.0\Umbrella.Utilities.Caching.xml</DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -12,14 +13,15 @@
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2018</Copyright>
-    <Description>
-      This package contains extension methods for the Microsoft.Extensions.Caching.Distributed.IDistributedCache type.
-      This has been created as an independent package as it takes a hard dependency on the Newtonsoft.Json package
-      which the Umbrella.Utilities package cannot to allow it to be used on platforms that don't work well with
-      the Newtonsoft.Json package available on NuGet.
-    </Description>
+    <Description>This package contains extension methods for the Microsoft.Extensions.Caching.Distributed.IDistributedCache type.
+This has been created as an independent package as it takes a hard dependency on the Newtonsoft.Json package which the Umbrella.Utilities package cannot to allow it to be used on platforms that don't work well with the Newtonsoft.Json package available on NuGet.
+</Description>
     <PackageLicenseUrl>https://github.com/zinofi/Umbrella/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='TeamServices|AnyCPU'">
+    <Optimize>true</Optimize>
   </PropertyGroup>
 
   <ItemGroup>
@@ -29,5 +31,5 @@
   <ItemGroup>
     <ProjectReference Include="..\Umbrella.Utilities\Umbrella.Utilities.csproj" />
   </ItemGroup>
-  
+
 </Project>
